src/parser/PmmParser.java
// Generated from src\parser\Pmm.g4 by ANTLR 4.9.1
package parser;

	import ast.*;
	import ast.types.*;
	import ast.statements.*;
	import ast.expresions.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, LINE_COMMENT=38, 
		MULTILINE_COMMENT=39, WS=40, ID=41, INT_CONSTANT=42, REAL_CONSTANT=43, 
		CHAR_CONSTANT=44;
	public static final int
		RULE_program = 0, RULE_varDef = 1, RULE_paramDef = 2, RULE_paramsDef = 3, 
		RULE_funcDef = 4, RULE_mainDef = 5, RULE_statement = 6, RULE_ifStatement = 7, 
		RULE_statement_main = 8, RULE_statements_block = 9, RULE_expresionList = 10, 
		RULE_type = 11, RULE_buitInType = 12, RULE_struct = 13, RULE_expresion = 14, 
		RULE_funcCall = 15, RULE_funcCallParams = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "varDef", "paramDef", "paramsDef", "funcDef", "mainDef", "statement", 
			"ifStatement", "statement_main", "statements_block", "expresionList", 
			"type", "buitInType", "struct", "expresion", "funcCall", "funcCallParams"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "':'", "';'", "'def'", "'('", "')'", "'{'", "'}'", "'main'", 
			"'while'", "'if'", "'else'", "'input'", "'print'", "'return'", "'='", 
			"'['", "']'", "'int'", "'double'", "'char'", "'struct'", "'.'", "'-'", 
			"'!'", "'*'", "'/'", "'%'", "'+'", "'>'", "'>='", "'<'", "'<='", "'!='", 
			"'=='", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "LINE_COMMENT", "MULTILINE_COMMENT", "WS", "ID", "INT_CONSTANT", 
			"REAL_CONSTANT", "CHAR_CONSTANT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program ast = new Program();
		public FuncDefContext funcDef;
		public VarDefContext varDef;
		public MainDefContext mainDef;
		public MainDefContext mainDef() {
			return getRuleContext(MainDefContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PmmParser.EOF, 0); }
		public List<FuncDefContext> funcDef() {
			return getRuleContexts(FuncDefContext.class);
		}
		public FuncDefContext funcDef(int i) {
			return getRuleContext(FuncDefContext.class,i);
		}
		public List<VarDefContext> varDef() {
			return getRuleContexts(VarDefContext.class);
		}
		public VarDefContext varDef(int i) {
			return getRuleContext(VarDefContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(40);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case T__3:
						{
						setState(34);
						((ProgramContext)_localctx).funcDef = funcDef();
						_localctx.ast.add(((ProgramContext)_localctx).funcDef.ast);
						}
						break;
					case ID:
						{
						setState(37);
						((ProgramContext)_localctx).varDef = varDef();
						_localctx.ast.addVarsDef(((ProgramContext)_localctx).varDef.ast);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(44);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(45);
			((ProgramContext)_localctx).mainDef = mainDef();
			_localctx.ast.add(((ProgramContext)_localctx).mainDef.ast);
			setState(47);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDefContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<VarDefinition>();
		public Token idList;
		public Token lastId;
		public TypeContext type;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(PmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PmmParser.ID, i);
		}
		public VarDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDef; }
	}

	public final VarDefContext varDef() throws RecognitionException {
		VarDefContext _localctx = new VarDefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_varDef);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(49);
					((VarDefContext)_localctx).idList = match(ID);
					setState(50);
					match(T__0);
					_localctx.ast.add(new VarDefinition((((VarDefContext)_localctx).idList!=null?((VarDefContext)_localctx).idList.getText():null), ((VarDefContext)_localctx).idList.getLine(), ((VarDefContext)_localctx).idList.getCharPositionInLine()));
					}
					} 
				}
				setState(56);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(57);
			((VarDefContext)_localctx).lastId = match(ID);
			setState(58);
			match(T__1);
			setState(59);
			((VarDefContext)_localctx).type = type();
			setState(60);
			match(T__2);

						_localctx.ast.add(new VarDefinition((((VarDefContext)_localctx).lastId!=null?((VarDefContext)_localctx).lastId.getText():null), ((VarDefContext)_localctx).lastId.getLine(), ((VarDefContext)_localctx).lastId.getCharPositionInLine()));
						_localctx.ast.forEach(var -> var.setType(((VarDefContext)_localctx).type.ast));
					
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamDefContext extends ParserRuleContext {
		public VarDefinition ast;
		public Token ID;
		public BuitInTypeContext buitInType;
		public TerminalNode ID() { return getToken(PmmParser.ID, 0); }
		public BuitInTypeContext buitInType() {
			return getRuleContext(BuitInTypeContext.class,0);
		}
		public ParamDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramDef; }
	}

	public final ParamDefContext paramDef() throws RecognitionException {
		ParamDefContext _localctx = new ParamDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_paramDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			((ParamDefContext)_localctx).ID = match(ID);
			setState(64);
			match(T__1);
			setState(65);
			((ParamDefContext)_localctx).buitInType = buitInType();
			((ParamDefContext)_localctx).ast =  new VarDefinition((((ParamDefContext)_localctx).ID!=null?((ParamDefContext)_localctx).ID.getText():null), ((ParamDefContext)_localctx).buitInType.ast, ((ParamDefContext)_localctx).ID.getLine(), ((ParamDefContext)_localctx).ID.getCharPositionInLine());
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsDefContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<VarDefinition>();
		public ParamDefContext paramInList;
		public ParamDefContext lastParam;
		public List<ParamDefContext> paramDef() {
			return getRuleContexts(ParamDefContext.class);
		}
		public ParamDefContext paramDef(int i) {
			return getRuleContext(ParamDefContext.class,i);
		}
		public ParamsDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramsDef; }
	}

	public final ParamsDefContext paramsDef() throws RecognitionException {
		ParamsDefContext _localctx = new ParamsDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_paramsDef);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(74);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(68);
						((ParamsDefContext)_localctx).paramInList = paramDef();
						setState(69);
						match(T__0);
						_localctx.ast.add(((ParamsDefContext)_localctx).paramInList.ast);
						}
						} 
					}
					setState(76);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				}
				setState(77);
				((ParamsDefContext)_localctx).lastParam = paramDef();
				_localctx.ast.add(((ParamsDefContext)_localctx).lastParam.ast);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncDefContext extends ParserRuleContext {
		public FuncDefinition ast;
		public Token def;
		public Token ID;
		public ParamsDefContext paramsDef;
		public BuitInTypeContext buitInType;
		public VarDefContext varDef;
		public StatementContext statement;
		public TerminalNode ID() { return getToken(PmmParser.ID, 0); }
		public ParamsDefContext paramsDef() {
			return getRuleContext(ParamsDefContext.class,0);
		}
		public BuitInTypeContext buitInType() {
			return getRuleContext(BuitInTypeContext.class,0);
		}
		public List<VarDefContext> varDef() {
			return getRuleContexts(VarDefContext.class);
		}
		public VarDefContext varDef(int i) {
			return getRuleContext(VarDefContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FuncDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDef; }
	}

	public final FuncDefContext funcDef() throws RecognitionException {
		FuncDefContext _localctx = new FuncDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funcDef);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			((FuncDefContext)_localctx).def = match(T__3);
			setState(83);
			((FuncDefContext)_localctx).ID = match(ID);
			setState(84);
			match(T__4);
			setState(85);
			((FuncDefContext)_localctx).paramsDef = paramsDef();
			setState(86);
			match(T__5);
			FuncType funcType = new FuncType(((FuncDefContext)_localctx).paramsDef.ast);
			setState(88);
			match(T__1);
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__18) | (1L << T__19) | (1L << T__20))) != 0)) {
				{
				setState(89);
				((FuncDefContext)_localctx).buitInType = buitInType();
				funcType.setRetType(((FuncDefContext)_localctx).buitInType.ast);
				}
			}

			((FuncDefContext)_localctx).ast =  new FuncDefinition((((FuncDefContext)_localctx).ID!=null?((FuncDefContext)_localctx).ID.getText():null), funcType, ((FuncDefContext)_localctx).def.getLine(), ((FuncDefContext)_localctx).def.getCharPositionInLine());
			setState(95);
			match(T__6);
			setState(101);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(96);
					((FuncDefContext)_localctx).varDef = varDef();
					_localctx.ast.addVarsDef(((FuncDefContext)_localctx).varDef.ast);
					}
					} 
				}
				setState(103);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__9) | (1L << T__10) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__23) | (1L << T__24) | (1L << ID) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << CHAR_CONSTANT))) != 0)) {
				{
				{
				setState(104);
				((FuncDefContext)_localctx).statement = statement();
				_localctx.ast.addStatement(((FuncDefContext)_localctx).statement.ast);
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(112);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainDefContext extends ParserRuleContext {
		public FuncDefinition ast;
		public Token def;
		public Token funcName;
		public ParamsDefContext paramsDef;
		public BuitInTypeContext buitInType;
		public VarDefContext varDef;
		public StatementContext statement;
		public ParamsDefContext paramsDef() {
			return getRuleContext(ParamsDefContext.class,0);
		}
		public BuitInTypeContext buitInType() {
			return getRuleContext(BuitInTypeContext.class,0);
		}
		public List<VarDefContext> varDef() {
			return getRuleContexts(VarDefContext.class);
		}
		public VarDefContext varDef(int i) {
			return getRuleContext(VarDefContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MainDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainDef; }
	}

	public final MainDefContext mainDef() throws RecognitionException {
		MainDefContext _localctx = new MainDefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_mainDef);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			((MainDefContext)_localctx).def = match(T__3);
			setState(115);
			((MainDefContext)_localctx).funcName = match(T__8);
			setState(116);
			match(T__4);
			setState(117);
			((MainDefContext)_localctx).paramsDef = paramsDef();
			setState(118);
			match(T__5);
			FuncType funcType = new FuncType(((MainDefContext)_localctx).paramsDef.ast);
			setState(120);
			match(T__1);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__18) | (1L << T__19) | (1L << T__20))) != 0)) {
				{
				setState(121);
				((MainDefContext)_localctx).buitInType = buitInType();
				funcType.setRetType(((MainDefContext)_localctx).buitInType.ast);
				}
			}

			((MainDefContext)_localctx).ast =  new FuncDefinition((((MainDefContext)_localctx).funcName!=null?((MainDefContext)_localctx).funcName.getText():null), funcType, ((MainDefContext)_localctx).def.getLine(), ((MainDefContext)_localctx).def.getCharPositionInLine());
			setState(127);
			match(T__6);
			setState(133);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(128);
					((MainDefContext)_localctx).varDef = varDef();
					_localctx.ast.addVarsDef(((MainDefContext)_localctx).varDef.ast);
					}
					} 
				}
				setState(135);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__9) | (1L << T__10) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__23) | (1L << T__24) | (1L << ID) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << CHAR_CONSTANT))) != 0)) {
				{
				{
				setState(136);
				((MainDefContext)_localctx).statement = statement();
				_localctx.ast.addStatement(((MainDefContext)_localctx).statement.ast);
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(144);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Statement ast;
		public Statement_mainContext statement_main;
		public IfStatementContext ifStatement;
		public Token whileKey;
		public ExpresionContext expresion;
		public Statements_blockContext statements_block;
		public Statement_mainContext statement_main() {
			return getRuleContext(Statement_mainContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public Statements_blockContext statements_block() {
			return getRuleContext(Statements_blockContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		try {
			setState(159);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
			case T__12:
			case T__13:
			case T__14:
			case T__23:
			case T__24:
			case ID:
			case INT_CONSTANT:
			case REAL_CONSTANT:
			case CHAR_CONSTANT:
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				((StatementContext)_localctx).statement_main = statement_main();
				setState(147);
				match(T__2);
				((StatementContext)_localctx).ast =  ((StatementContext)_localctx).statement_main.ast;
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				((StatementContext)_localctx).ifStatement = ifStatement();
				((StatementContext)_localctx).ast =  ((StatementContext)_localctx).ifStatement.ast;
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 3);
				{
				setState(153);
				((StatementContext)_localctx).whileKey = match(T__9);
				setState(154);
				((StatementContext)_localctx).expresion = expresion(0);
				setState(155);
				match(T__1);
				setState(156);
				((StatementContext)_localctx).statements_block = statements_block();

							((StatementContext)_localctx).ast =  new WhileLoop(((StatementContext)_localctx).expresion.ast, ((StatementContext)_localctx).statements_block.ast, ((StatementContext)_localctx).whileKey.getLine(), ((StatementContext)_localctx).whileKey.getCharPositionInLine());
						
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public IfCond ast;
		public Token ifKey;
		public ExpresionContext expresion;
		public Statements_blockContext ifStatements;
		public Statements_blockContext elseStatements;
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public List<Statements_blockContext> statements_block() {
			return getRuleContexts(Statements_blockContext.class);
		}
		public Statements_blockContext statements_block(int i) {
			return getRuleContext(Statements_blockContext.class,i);
		}
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ifStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			((IfStatementContext)_localctx).ifKey = match(T__10);
			setState(162);
			((IfStatementContext)_localctx).expresion = expresion(0);
			setState(163);
			match(T__1);
			setState(164);
			((IfStatementContext)_localctx).ifStatements = statements_block();
			((IfStatementContext)_localctx).ast =  new IfCond(((IfStatementContext)_localctx).expresion.ast, ((IfStatementContext)_localctx).ifStatements.ast, ((IfStatementContext)_localctx).ifKey.getLine(), ((IfStatementContext)_localctx).ifKey.getCharPositionInLine());
			setState(170);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(166);
				match(T__11);
				setState(167);
				((IfStatementContext)_localctx).elseStatements = statements_block();
				_localctx.ast.setElseStatements(((IfStatementContext)_localctx).elseStatements.ast);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statement_mainContext extends ParserRuleContext {
		public Statement ast;
		public Token input;
		public ExpresionListContext expresionList;
		public Token print;
		public Token ret;
		public ExpresionContext expresion;
		public ExpresionContext toAsign;
		public ExpresionContext value;
		public FuncCallContext funcCall;
		public ExpresionListContext expresionList() {
			return getRuleContext(ExpresionListContext.class,0);
		}
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
